# docvault

./: .env.example  .gitignore  README.md  pyproject.toml
demo/: app.py
notebooks/: 01_chunking_exploration.ipynb
scripts/: ingest_docs.py  query.py
src/docvault/: __init__.py  config.py  pipeline.py
src/docvault/embeddings/: __init__.py  cache.py  encoder.py
src/docvault/generation/: __init__.py  client.py  prompt.py  response.py
src/docvault/ingest/: __init__.py  chunking.py  extract.py  metadata.py
src/docvault/retrieval/: __init__.py  index.py  reranker.py  search.py
tests/: test_chunking.py  test_embeddings.py  test_pipeline.py  test_retrieval.py
